gateway/gke-gateway-controller/ex4-route-weight-1.yaml
apiVersion: networking.x-k8s.io/v1alpha1
kind: HTTPRoute
metadata:
  name: foobar-route
  namespace: default
  labels:
    gateway: internal-gw-2
spec:
  hosts:
  - hostnames: 
    - foo.com
    rules:
    - action:
        forwardTo:
        - targetRef:
            name: foo-svc
          weight: 100
        - targetRef:
            name: foo-v2-svc
          weight: 0
  - hostnames: 
    - bar.com
    rules:
    - matches:
      - path: /login
        headers:
          accept: text/html
      action:
        forwardTo:
        - targetRef:
            name: bar-svc
