gateway/gke-gateway-controller/foobar-gw.yaml
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: internal-gw-2
  namespace: default
spec:
  class: internal
  listeners:  
  - protocol: HTTP
    port: 80
    routes:
      resource: httproutes
      routeSelector:
        matchLabels:
          gateway: internal-gw-2
---
apiVersion: networking.x-k8s.io/v1alpha1
kind: HTTPRoute
metadata:
  name: foobar-route
  namespace: default
  labels:
    gateway: internal-gw-2
spec:
  hosts:
  - hostnames: 
    - foo.com
    rules:
    - action:
        forwardTo:
        - targetRef:
            name: foo-svc
  - hostnames: 
    - bar.com
    rules:
    - matches:
      - path: /login
        headers:
          accept: text/html
      action:
        forwardTo:
        - targetRef:
            name: bar-svc
