gateway/gke-gateway-controller/simple-internal-gw.yaml
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: simple-internal-gateway
  namespace: default
spec:
  class: internal
  listeners:  
  - protocol: HTTP
    port: 80
    routes:
      resource: httproutes
---
apiVersion: networking.x-k8s.io/v1alpha1
kind: HTTPRoute
metadata:
  name: simple-route
  namespace: default
spec:
  hosts:
  - rules:
    - action:
        forwardTo:
        - targetRef:
            name: foo-svc
